--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "multiparty": "^4.2.2",
     "mysql": "^2.18.1",
     "node-xlsx": "^0.15.0",
+    "nodemailer": "^6.4.17",
     "nodemon": "^2.0.6",
     "nprogress": "^0.2.0",
     "qr-image": "^3.2.0",
